<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sorbellini.s214631.lab3.OfferDetails">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">


        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/imageOffer"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_launcher"
            />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/offer_name"
                    android:text="@string/name_offer"
                    android:textSize="20sp"
                    />

                <!-- correct the padding -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/price_offer"
                    android:text="@string/price_offer"
                    android:textSize="20sp"
                    android:paddingLeft="220dp"
                    />

            </LinearLayout>




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/offer_description"
            android:text="@string/description_offer"
            android:textSize="20sp"/>



        <FrameLayout
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:outlineProvider="bounds"
            android:background="@drawable/rectangle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/total_description"
                android:textSize="15sp"
                android:id="@+id/textViewDescription"
                android:outlineProvider="bounds"
                android:visibility="visible" />
        </FrameLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_details"
            android:id="@+id/button_restaurant_details"
            android:background="#009dff" />


    </LinearLayout>
</RelativeLayout>
