<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sorbellini.s214631.lab3.ShowReservationDetails">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/reservation_details_image"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_launcher"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reservation_details_offer_name"
            android:text="@string/name_offer"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_below="@+id/reservation_details_image"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reservation_details_offer"
            android:hint="@string/hint_offer_name"
            android:layout_below="@+id/reservation_details_offer_name"
            android:textAppearance="?android:attr/textAppearanceLarge"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reservation_details_offer_price"
            android:text="@string/price_offer"
            android:textSize="20sp"
            android:layout_alignParentRight="true"
            android:paddingRight="40dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_below="@+id/reservation_details_image"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reservation_details_price"
            android:hint="Price"
            android:layout_below="@+id/reservation_details_offer_price"
            android:layout_alignParentRight="true"
            android:paddingRight="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/offer_description"
            android:text="@string/reservation_details_date"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_below="@+id/reservation_details_offer"
            />

        <TextView
            android:layout_below="@id/offer_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/hint_reservation_details_date"
            android:id="@+id/reservation_details_date_time"/>



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/restaurant_details"
            android:textAlignment="center"
            android:id="@+id/button_restaurant_details"
            android:background="#009dff"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BUY"
            android:id="@+id/button_buy"
            android:background="#009dff"
            android:onClick="buyButton"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"/>


    </RelativeLayout>
</RelativeLayout>
